--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  height: 100%;
+  overflow-y: hidden;
+}
+
 body {
   margin: 0;
+  width: 100%;
+  height: 100vh;
 }
