--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 #root {
   height: 100%;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 body {
@@ -40,4 +40,21 @@ body {
 .auftrag {
   border-left: 5px solid grey;
   padding-left: 20px;
+}
+
+pre {
+  display: inline;
+}
+
+code > pre {
+  display: block;
+}
+
+code {
+  display: block;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 15px auto;
+  width: max(80em, 70%);
 }
