--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,17 @@ body {
   border-left: 5px solid grey;
   padding-left: 20px;
 }
+
+h1 a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1 > .back {
+  float: right;
+  font-size: 12pt;
+}
+
+h1 {
+  margin: 20px 50px;
+}
