--- a/src/index.css
+++ b/src/index.css
@@ -12,17 +12,25 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --header-height: 60px;
 }
 
-#root {
-  height: 100%;
-  overflow-y: scroll;
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  margin-top: var(--header-height);
   width: 100%;
-  height: 100vh;
+}
+
+header {
+  position: fixed;
+  inset: 0;
+  background-color: #242424;
+  height: var(--header-height);
 }
 
 #root main {
