--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,14 @@ header {
   height: var(--header-height);
 }
 
+footer {
+  text-align: center;
+  font-size: 0.8rem;
+  margin-top: 20px;
+  padding: 10px;
+  border-top: 0.5px solid rgba(255, 255, 255, 0.502);
+}
+
 #root main {
   margin: 0 auto;
   width: max(70vw, 640px);
@@ -56,12 +64,15 @@ h1 a {
 }
 
 h1 > .back {
-  float: right;
   font-size: 12pt;
 }
 
 h1 {
-  margin: 20px 50px;
+  margin: 0px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 ol.nav a {
