--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ footer {
   border-top: 0.5px solid rgba(255, 255, 255, 0.502);
 }
 
-#root main {
+#root main > section,
+#root main > h2 {
   margin: 0 auto;
   width: clamp(460px, 80%, 920px);
 }
@@ -57,6 +58,7 @@ footer {
 .auftrag {
   border-left: 5px solid grey;
   padding-left: 20px;
+  margin-top: 50px;
 }
 
 h1 a {
